--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h2>Pisia Kamushkin</h2>
+<input type="text">
+<button>add name</button>
 <a href="Page2.html">Page2</a>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias debitis nam obcaecati provident! Delectus deleniti dolor earum esse illum magnam nostrum perspiciatis provident, quae quisquam, rem vel? Dicta, dignissimos, velit.</p>
 </body>
