--- a/Page2.html
+++ b/Page2.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        background:#ccc;
+    </style>
 </head>
 <body>
     <h1>Hello Vasia</h1>
