--- a/Page2.html
+++ b/Page2.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        background:#ccc;
+        body{
+            background-color:#ccc;
+        }
+
     </style>
 </head>
 <body>
